[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ase-protocol"
version = "1.1.0"
description = "Agent Settlement Extension (ASE) Protocol"
readme = "README.md"
authors = [
  { name = "Garudex Labs Team", email = "support@garudexlabs.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0.0",
    "cryptography>=46.0.5",
    "pyjwt>=2.8.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "hypothesis>=6.100.0",
]

[tool.setuptools.packages.find]
where = ["src"]
